# fcitx5-plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml  compare.yml  debug.yml  js.yml  macos.yml  windows.yml
cache/: README.md
cmake/: Fcitx5UtilsConfig.cmake  FindLibIMECore.cmake
cmake/js/: FindFcitx5Config.cmake  FindFcitx5Core.cmake  FindFcitx5Module.cmake  FindFcitx5Utils.cmake
cmake/relative/: FindFcitx5Config.cmake  FindFcitx5Core.cmake  FindLua.cmake
docs/: debug-js.zh-CN.md  test.zh-CN.md
fcitx5-rime-data/: default.yaml
patches/: chinese-addons.js.patch  chinese-addons.patch  cskk.patch  customphrase_wrapper.cpp  jyutping.patch  keyman.patch  kkc.patch  libime.js.patch  libime.patch  rime.js.patch  rime.log.patch  rime.patch  skk.patch  table-other.patch  zhuyin.patch
scripts/: check-shared-files.py  check-validity.sh  create-slim-language-model.sh  generate-descriptor.py  generate-meta.py  install-deps.sh  install.sh  package-table-extra.py  platform.sh  prune.py
tests/: macos-26.list  test-anthy.spec.ts  test-chewing.spec.ts  test-chinese-addons.spec.ts  test-cskk.spec.ts  test-hallelujah.spec.ts  test-hangul.spec.ts  test-jyutping.spec.ts  test-keyman.spec.ts  test-kkc.spec.ts  test-lua.spec.ts  test-m17n.spec.ts  test-mozc.spec.ts  test-rime.spec.ts  test-sayura.spec.ts  test-skk.spec.ts  test-thai.spec.ts  test-unikey.spec.ts  test-zhuyin.spec.ts  util.ts  windows-2025.list
tests/keyman/esperanto_sava_eujao/: esperanto_sava_eujao.kmx  kmp.json
tests/rime/: luna_pinyin.custom.yaml  rime.lua
tests/rime/js/: date_translator.js
